--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "moment": "^2.27.0",
         "moment-timezone": "^0.5.31",
         "vue-router": "^3.4.3",
-        "vuetify": "^2.3.8"
+        "vuetify": "^2.3.8",
+        "vuex": "^3.5.1"
     }
 }
