--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "chart.js": "^2.9.3",
         "moment": "^2.27.0",
         "moment-timezone": "^0.5.31",
+        "vue-chartjs": "^3.5.1",
         "vue-router": "^3.4.3",
         "vuetify": "^2.3.8",
         "vuex": "^3.5.1"
